# invoices

./: .gitignore  README.md  create.py  main.py  pyproject.toml  requirements.txt  strings.yaml  template.tex  utils.py
lib/: functionality.py  invoice.py  utils.py  validate.py
