[tool.poetry]
name = "rechnungen"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.790"
pyyaml = "^5.2"
Jinja2 = "^2.10.3"
dateparser = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
